# davidasboth.github.io

./: .gitignore  2025-year-in-review.html  5-programming-concepts-for-data-scientists.html  CNAME  analysing-london-house-prices.html  analysis-is-alan-davies-getting-better-at-qi.html  authors.html  categories.html  citizen-data-science.html  connecting-to-google-sheets-in-python.html  duck-typing.html  gardeners-guide-to-data-analysis.html  get-started-with-data-science.html  impostor-syndrome.html  index.html  index2.html  index3.html  index4.html  index5.html  index6.html  index7.html  index8.html  introduction-to-k-means-clustering.html  intuition-first-machine-learning.html  learning-as-a-data-generalist.html  learning-data-like-jazz.html  machine-learning-haikus.html  markov-chains-for-text-generation.html  maths-concepts-you-should-know-for-data-science.html  method-chaining-in-pandas.html  more-on-k-means-clustering.html  pandas-quick-reference-guide.html  pandas-thinking-in-vectors.html  pelicanconf.py  publish.cmd  pycon-uk-2025-roundup.html  pyproject.toml  realistic-machine-learning.html  self-organising-maps-an-introduction.html  self-organising-maps-in-depth.html  (+9 more)
about/: index.html
articles/: index.html
author/: david.html  david2.html  david3.html  david4.html  david5.html  david6.html  david7.html  david8.html
book-code/: index.html
category/: data-generalism.html  data-science.html  data-science2.html  education.html  learning.html  machine-learning.html  machine-learning2.html  machine-learning3.html  miscellaneous.html  personal.html  (+6 more)
(+168 files in other folders)
